force-app/main/default/objects/student__c/fields/Genter__c.field-meta.xml
<CustomField>
    <fullName>Genter__c</fullName>
    <label>Genter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>