force-app/main/default/objects/student__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IND1</fullName>
            </value>
            <value>
                <fullName>IND2</fullName>
            </value>
            <value>
                <fullName>IND3</fullName>
            </value>
            <value>
                <fullName>US1</fullName>
            </value>
            <value>
                <fullName>US2</fullName>
            </value>
            <value>
                <fullName>US3</fullName>
            </value>
            <value>
                <fullName>UK1</fullName>
            </value>
            <value>
                <fullName>UK2</fullName>
            </value>
            <value>
                <fullName>UK3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>