force-app/main/default/objects/student__c/fields/Travel_required_or_not__c.field-meta.xml
<CustomField>
    <fullName>Travel_required_or_not__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel required or not</label>
    <type>Checkbox</type>
</CustomField>