force-app/main/default/objects/student__c/validationRules/Address_length_limit_not_exist_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_length_limit_not_exist_100</fullName>
    <active>false</active>
    <errorConditionFormula>LEN(Address__c)&gt;100</errorConditionFormula>
    <errorDisplayField>Address__c</errorDisplayField>
    <errorMessage>Please enter the address character less than 100</errorMessage>
</ValidationRule>