force-app/main/default/objects/student__c/validationRules/Country_null_and_not_null_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_null_and_not_null_validation</fullName>
    <active>false</active>
    <errorConditionFormula>OR(IF(!ISBLANK(TEXT(Country__c)) , false, IF(OR(!ISBLANK(City__c),!ISBLANK(Address__c)),true, false)),IF(ISBLANK(TEXT(Country__c)) , false, IF(OR(ISBLANK(City__c),ISBLANK(Address__c)),true, false)))</errorConditionFormula>
    <errorMessage>IF country some value enter city and address and if country is null no need to enter city and state</errorMessage>
</ValidationRule>