force-app/main/default/objects/student__c/validationRules/Country_null_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_null_validation</fullName>
    <active>false</active>
    <errorConditionFormula>IF(!ISBLANK(TEXT(Country__c)) , false, IF(OR(!ISBLANK(City__c),!ISBLANK(Address__c)),true, false))</errorConditionFormula>
    <errorMessage>Please dont enter city and address</errorMessage>
</ValidationRule>