force-app/main/default/objects/student__c/validationRules/Country_some_value.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_some_value</fullName>
    <active>false</active>
    <description>IF(ISBLANK(TEXT(Country__c)) , false, IF(OR(ISBLANK(City__c),ISBLANK(Address__c)),true, false))</description>
    <errorConditionFormula>IF(ISBLANK(TEXT(Country__c)) , false, IF(OR(ISBLANK(City__c),ISBLANK(Address__c)),true, false))</errorConditionFormula>
    <errorMessage>Please enter the city and State</errorMessage>
</ValidationRule>