force-app/main/default/objects/student__c/validationRules/create_New_record_in_student_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>create_New_record_in_student_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(), ISBLANK(Email__c))</errorConditionFormula>
    <errorMessage>Please this record is new and email is required</errorMessage>
</ValidationRule>