force-app/main/default/objects/student__c/validationRules/Vlookup_same_Object.validationRule-meta.xml
<ValidationRule>
    <fullName>Vlookup_same_Object</fullName>
    <active>false</active>
    <errorConditionFormula>Name==VLOOKUP(  $ObjectType.student__c.Fields.Name  ,    $ObjectType.student__c.Fields.Name ,  Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please check the duplicate value found in name field</errorMessage>
</ValidationRule>